--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,10 @@ name: Run Tests
 
 on: [push]
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
