Added Detekt workflow
Signed-off-by: Arnau Mora <arnyminerz@proton.me>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,12 @@ permissions:
   pull-requests: write
 
 jobs:
+  run_detekt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Detekt
+        uses: natiginfo/action-detekt-all@1.23.0
   build_and_test:
     runs-on: ubuntu-latest
     steps:
