--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Detekt
         uses: natiginfo/action-detekt-all@1.23.0
+      - name: Publish Detekt Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            build/detekt/*.xml
   build_and_test:
     runs-on: ubuntu-latest
     steps:
