--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,23 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: detekt
+        uses: alaegin/Detekt-Action@v1.23.0
         with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-      - name: Run tests
-        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
-        with:
-          arguments: detekt
-      - name: Publish Detekt Results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
-        with:
-          files: |
-            build/detekt/*.xml
+          github_token: ${{ secrets.github_token }}
+          detekt_config: config/detekt/detekt.yml # Change config path
   build_and_test:
     runs-on: ubuntu-latest
     steps:
