--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: detekt
+      - name: Run detekt
         uses: alaegin/Detekt-Action@v1.23.0
         with:
           github_token: ${{ secrets.github_token }}
-          detekt_config: config/detekt/detekt.yml # Change config path
+          detekt_config: config/detekt/detekt.yml
+          reviewdog_reporter: github-pr-review
+          reviewdog_level: error
   build_and_test:
     runs-on: ubuntu-latest
     steps:
