--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           detekt_config: config/detekt/detekt.yml
-          reviewdog_reporter: github-pr-review
+          reviewdog_reporter: github-check
           reviewdog_level: error
   build_and_test:
     runs-on: ubuntu-latest
