--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Run detekt review
+        uses: alaegin/Detekt-Action@v1.23.0
+        if: github.event_name == 'pull_request'
+        with:
+          github_token: ${{ secrets.github_token }}
+          detekt_config: config/detekt/detekt.yml
+          reviewdog_reporter: github-pr-review
+          reviewdog_level: error
       - name: Run detekt
         uses: alaegin/Detekt-Action@v1.23.0
+        if: github.event_name != 'pull_request'
         with:
           github_token: ${{ secrets.github_token }}
           detekt_config: config/detekt/detekt.yml
