--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,8 @@ version: '3.7'
 
 services:
   backend:
-    image: arnyminerz/filamagenta:0.1.0
+    image: filamagenta:0.1.0
     container_name: filamagenta_backend
     restart: unless-stopped
     ports:
       - "8080:8080"
-    volumes:
-      - ./docker/certs:/certs
