Updated properties versioning
Signed-off-by: Arnau Mora <arnyminerz@proton.me>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 kotlin.code.style=official
 
-ktorVersion=2.3.1
-kotlinVersion=1.9.0
-logbackVersion=1.2.11
-exposedVersion=0.41.1
-h2Version=2.1.214
-jsonVersion=20230227
-sqliteVersion=3.42.0.0
-detektVersion=1.23.0
-qrCodeKotlinVersion=3.3.0
-zxingVersion=3.5.1
-postgresqlVersion=42.6.0
-sentryVersion=6.23.0
+ktor.version=2.3.1
+kotlin.version=1.9.0
+logback.version=1.2.11
+exposed.version=0.41.1
+h2.version=2.1.214
+json.version=20230227
+sqlite.version=3.42.0.0
+detekt.version=1.23.0
+qrCodeKotlin.version=3.3.0
+zxing.version=3.5.1
+postgresql.version=42.6.0
+sentry.version=6.23.0
